tests/stderr-snapshots/integration__integration__mapfiles__diff_flags_syntax_errors.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: invalid difficulty flag definition
  ┌─ <mapfile-1>:3:3
  │
3 │ 1 @-
  │   ^^
  │
  = the definition must consist of a ASCII alphanumeric character and a +/- (+ means enabled by default)

error: invalid difficulty flag definition
  ┌─ <mapfile-1>:4:3
  │
4 │ 2 X@
  │   ^^
  │
  = the definition must consist of a ASCII alphanumeric character and a +/- (+ means enabled by default)

error: invalid difficulty flag definition
  ┌─ <mapfile-1>:5:3
  │
5 │ 3 a
  │   ^
  │
  = the definition must consist of a ASCII alphanumeric character and a +/- (+ means enabled by default)

error: invalid difficulty flag definition
  ┌─ <mapfile-1>:6:3
  │
6 │ 4 θ  # a two byte character
  │   ^
  │
  = the definition must consist of a ASCII alphanumeric character and a +/- (+ means enabled by default)


